# aucorsa-home-assistant

./: .gitignore  LICENSE  README.md  aucorsa_cli.py  hacs.json  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml
aucorsa/: __init__.py  _version.py  cli.py  client.py  lines.py  models.py  parser.py
custom_components/aucorsa/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  parser.py  sensor.py
custom_components/aucorsa/static/: aucorsa-panel.js
custom_components/aucorsa/translations/: en.json  es.json
docs/: api.md  core.md  home_assistant.md
examples/: panel_custom.yaml.example
tests/: test_async_api.py  test_parser.py
